--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-notifications": "^1.6.0",
     "react-react": "^1.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
