--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0"
   },
