--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hooked",
+  "description": "a really cool app",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -33,7 +34,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
