--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "node app",
+    "start": "node app.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
