--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "16.14.0",
-    "npm": "6.x"
+    "node": "16.14.0"
   },
 
   "dependencies": {
@@ -39,8 +38,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
